Add: Card related tables

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "constring": "Server=tcp:dot-coder-server.database.windows.net,1433;Initial Catalog=StarDeckDB;Persist Security Info=False;User ID=yorbre25;Password=Yraulbr25;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
