--- a/Backend/StarAPI/StarAPI/Properties/launchSettings.json
+++ b/Backend/StarAPI/StarAPI/Properties/launchSettings.json
@@ -4,27 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:32918",
-      "sslPort": 44379
+      "applicationUrl": "http://localhost:6150",
+      "sslPort": 44307
     }
   },
   "profiles": {
-    "http": {
+    "StarAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5260",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7174;http://localhost:5260",
+      "applicationUrl": "https://localhost:7023;http://localhost:5023",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
