--- a/Backend/StarAPI/StarAPI/StarAPI.csproj
+++ b/Backend/StarAPI/StarAPI/StarAPI.csproj
@@ -8,6 +8,10 @@
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup>
+  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="docfx.console" Version="2.59.4">
       <PrivateAssets>all</PrivateAssets>
