--- a/Backend/StarAPI/StarAPI/appsettings.json
+++ b/Backend/StarAPI/StarAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "StarDeckDB": "Server=tcp:dot-coder-server.database.windows.net,1433;Initial Catalog=StarDeckDB;Persist Security Info=False;User ID=yorbre25;Password=Yraulbr25;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "StarDeckDB":"Server=tcp:dotcoder.database.windows.net,1433;Initial Catalog=StarDeckDB;Persist Security Info=False;User ID=dotcoder;Password=fuwafuwa3.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   },
   "Logging": {
