fix: minor import bug

--- a/Backend/StarAPI/StarAPI/appsettings.json
+++ b/Backend/StarAPI/StarAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "StarDeckDB":"Server=tcp:dotcoder.database.windows.net,1433;Initial Catalog=StarDeckDB;Persist Security Info=False;User ID=dotcoder;Password=fuwafuwa3.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "StarDeckDB":"Data Source=YordiB;Initial Catalog=StarDeck;Integrated Security=True;Encrypt=False"
+
 
   },
   "Logging": {
