--- a/Backend/StarAPI/StarAPI/appsettings.json
+++ b/Backend/StarAPI/StarAPI/appsettings.json
@@ -6,8 +6,10 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Console": "Information",
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*"
