--- a/Backend/StarAPI/StarAPI/appsettings.Development.json
+++ b/Backend/StarAPI/StarAPI/appsettings.Development.json
@@ -1,5 +1,23 @@
 {
   "Logging": {
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      },
+      "FormatterName": "json",
+      "FormatterOptions": {
+        "SingleLine": true,
+        "IncludeScopes": true,
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss",
+        "UseUtcTimestamp": true,
+        "JsonWriterOptions": {
+          "Indented": true
+        }
+
+      }
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
