--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test": "ng test",
     "compodoc": "npx compodoc -p tsconfig.doc.json"
   },
   "private": true,
@@ -31,20 +30,14 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@types/jest": "^29.5.2",
+    "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "jest-preset-angular": "^13.1.1",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": [
-      "<rootDir>/setup-jest.ts"
-    ],
-    "globalSetup": "jest-preset-angular/global-setup"
   }
 }
