--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,8 +31,10 @@
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.2",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.5.0",
+    "jest": "^29.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
