--- a/Backend/StarAPI/StarAPI/appsettings.json
+++ b/Backend/StarAPI/StarAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "StarDeckDB":"Data Source=YordiB;Initial Catalog=StarDeck;Integrated Security=True;Encrypt=False"
+    "StarDeckDB": "Data Source=DESKTOP-61L9NEP\\MSSQLSERVER01;Initial Catalog=StarDeck;Integrated Security=True;Encrypt=False"
 
 
   },
