Added turn player

--- a/Backend/StarAPI/StarAPI/appsettings.json
+++ b/Backend/StarAPI/StarAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "StarDeckContext":"Data Source=YordiB;Initial Catalog=StarDeck;Integrated Security=True;Encrypt=False"
+    "StarDeckContext": "Data Source=(localdb)\\StarDeck;Initial Catalog=StarDeck;Integrated Security=True;MultipleActiveResultSets=True"
 
 
   },
